{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 185,
  "lineage": "73a18cf2-a864-8ead-7631-3cae5176dd69",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "9200",
                  "5601",
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-27T00:15:18.894-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/interview-417918/global/firewalls/allow-public-prod",
            "log_config": [],
            "name": "allow-public-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/interview-417918/global/networks/dkatalis-vpc-prod",
            "priority": 1000,
            "project": "interview-417918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/interview-417918/global/firewalls/allow-public-prod",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "dkatalis-app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "local_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "2377"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-27T00:15:18.866-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/interview-417918/global/firewalls/allow-local-prod",
            "log_config": [],
            "name": "allow-local-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/interview-417918/global/networks/dkatalis-vpc-prod",
            "priority": 1000,
            "project": "interview-417918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/interview-417918/global/firewalls/allow-local-prod",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "dkatalis-app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/interview-417918/global/networks/dkatalis-vpc-prod",
            "mtu": 1460,
            "name": "dkatalis-vpc-prod",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "3998271533813406495",
            "project": "interview-417918",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/interview-417918/global/networks/dkatalis-vpc-prod"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-27T00:15:22.605-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/interview-417918/regions/asia-southeast1/subnetworks/dkatalis-subnet-prod",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "dkatalis-subnet-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/interview-417918/global/networks/dkatalis-vpc-prod",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "interview-417918",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/interview-417918/regions/asia-southeast1/subnetworks/dkatalis-subnet-prod",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.swarm_manager",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2310-mantic-amd64-v20240319",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/interview-417918/zones/asia-southeast1-a/disks/dkatalis-prod-swarm-manager"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/interview-417918/zones/asia-southeast1-a/instances/dkatalis-prod-swarm-manager",
            "instance_id": "8240864667166120132",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-highcpu-8",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCiWzaWysjn8kviefaKtylK//b4bQdq7slQ0TeSORzYziunuhrJTI5nYoQYf2TLGtNthqlBMNo/aOfGdst41lmLSyuEWhiVi9DcI7bb8twuzCBCtLcCc5frGRqbHPUG9JishvzcSAMS8uHeP51s1ZDp4ZWpl6M5LRd/SdMrT/jBFTTocmjgBCjb9NLilZAlxAjujzN/Juv/W6TNEGL5nTSwkcBI2nIsEHFJjiCYmwlGe5tkwUfLLmIfw58SHx+plv+qE9VXF7CQDMsTJ9eW5hCC/yqsY9cRONJNBsnIlvREkn0nNkeEKIAc6GmzBLh0wGr1w8+3YNU+NeybRw68pAlDxNxjMSrlFJdRyWymV6TuvQgtP20eL/aUvEaic9+ID7wQdJ2bbP+MJPMzeBzASh8qS4zU4VUXZ0qDKRYVlSz+5X [...]
            },
            "metadata_fingerprint": "__y88YgJh3A=",
            "metadata_startup_script": "#! /bin/bash\n\n# Add Docker's official GPG key:\nsudo apt-get update\nsudo apt-get install ca-certificates curl\nsudo install -m 0755 -d /etc/apt/keyrings\nsudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc\nsudo chmod a+r /etc/apt/keyrings/docker.asc\n\n# Add the repository to Apt sources:\necho \\\n  \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linu [...]
            "name": "dkatalis-prod-swarm-manager",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.126.137.26",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/interview-417918/global/networks/dkatalis-vpc-prod",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/interview-417918/regions/asia-southeast1/subnetworks/dkatalis-subnet-prod",
                "subnetwork_project": "interview-417918"
              }
            ],
            "project": "interview-417918",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/interview-417918/zones/asia-southeast1-a/instances/dkatalis-prod-swarm-manager",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dkatalis-app"
            ],
            "tags_fingerprint": "42uxskDoGzE=",
            "zone": "asia-southeast1-a"
          },
          "dependencies": [
            "module.network.google_compute_firewall.default",
            "module.network.google_compute_firewall.local_connection",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "module": "module.swarm_worker_01",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2310-mantic-amd64-v20240319",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/interview-417918/zones/asia-southeast1-a/disks/dkatalis-prod-swarm-worker-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/interview-417918/zones/asia-southeast1-a/instances/dkatalis-prod-swarm-worker-01",
            "instance_id": "2603483983928957143",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCiWzaWysjn8kviefaKtylK//b4bQdq7slQ0TeSORzYziunuhrJTI5nYoQYf2TLGtNthqlBMNo/aOfGdst41lmLSyuEWhiVi9DcI7bb8twuzCBCtLcCc5frGRqbHPUG9JishvzcSAMS8uHeP51s1ZDp4ZWpl6M5LRd/SdMrT/jBFTTocmjgBCjb9NLilZAlxAjujzN/Juv/W6TNEGL5nTSwkcBI2nIsEHFJjiCYmwlGe5tkwUfLLmIfw58SHx+plv+qE9VXF7CQDMsTJ9eW5hCC/yqsY9cRONJNBsnIlvREkn0nNkeEKIAc6GmzBLh0wGr1w8+3YNU+NeybRw68pAlDxNxjMSrlFJdRyWymV6TuvQgtP20eL/aUvEaic9+ID7wQdJ2bbP+MJPMzeBzASh8qS4zU4VUXZ0qDKRYVlSz+5X [...]
            },
            "metadata_fingerprint": "iVTIe7Sbs24=",
            "metadata_startup_script": "#! /bin/bash\n\n# Add Docker's official GPG key:\nsudo apt-get update\nsudo apt-get install ca-certificates curl\nsudo install -m 0755 -d /etc/apt/keyrings\nsudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc\nsudo chmod a+r /etc/apt/keyrings/docker.asc\n\n# Add the repository to Apt sources:\necho \\\n  \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linu [...]
            "name": "dkatalis-prod-swarm-worker-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.142.196.222",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/interview-417918/global/networks/dkatalis-vpc-prod",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/interview-417918/regions/asia-southeast1/subnetworks/dkatalis-subnet-prod",
                "subnetwork_project": "interview-417918"
              }
            ],
            "project": "interview-417918",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/interview-417918/zones/asia-southeast1-a/instances/dkatalis-prod-swarm-worker-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dkatalis-app"
            ],
            "tags_fingerprint": "42uxskDoGzE=",
            "zone": "asia-southeast1-a"
          },
          "dependencies": [
            "module.network.google_compute_firewall.default",
            "module.network.google_compute_firewall.local_connection",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.default",
            "module.swarm_manager.google_compute_instance.default"
          ]
        }
      ]
    }
  ]
}